[gd_scene load_steps=11 format=2]

[ext_resource path="res://WindowAvast.gd" type="Script" id=1]
[ext_resource path="res://Sounds/avast-ameaca-detectada.wav" type="AudioStream" id=2]
[ext_resource path="res://Images/WindowAvast.png" type="Texture" id=3]
[ext_resource path="res://Images/Botao.png" type="Texture" id=4]
[ext_resource path="res://Images/BotaoPressed.png" type="Texture" id=5]
[ext_resource path="res://Images/BotaoHover.png" type="Texture" id=6]
[ext_resource path="res://ScanButton.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Fonts/Slatana-Regular.ttf"

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 499.977, 157.071 )

[node name="WindowAvast" type="Node2D" index="0" groups=[
"AvastWindow",
]]

position = Vector2( 789.846, 455.217 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_group_": true
}
count = 5

[node name="audioAvast" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScanButton" type="TextureButton" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -169.0
margin_top = -61.0
margin_right = 155.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="CountLabel" type="Label" parent="ScanButton" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -110.0
margin_top = 249.0
margin_right = 458.0
margin_bottom = 481.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.210938, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Count Enemys: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="ScanButton" index="1"]

position = Vector2( 161.21, -257.461 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanButton/Area2D" index="0"]

position = Vector2( 3.56039, -6.13617 )
scale = Vector2( 0.992921, 0.117312 )
shape = SubResource( 3 )

[connection signal="pressed" from="ScanButton" to="ScanButton" method="_on_ScanButton_pressed"]

[connection signal="input_event" from="ScanButton/Area2D" to="." method="_on_Area2D_input_event"]


